--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <groupId>org.example</groupId>
   <artifactId>Hopper</artifactId>
   <version>1.0-SNAPSHOT</version>
+
+
+
   <packaging>pom</packaging>
 
   <!-- FIXME change it to the project's website -->
@@ -22,6 +25,13 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.9.0</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
