--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <packaging>pom</packaging>
 
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://gl-imi.f4.htw-berlin.de/info3-wise22/projects/team10/hopper</url>
 
   <distributionManagement>
     <site>
