Next attempt at the Webservlet concept

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.9.0</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
